--- a/index.html
+++ b/index.html
@@ -2,23 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Age Calculator</title>
+    <title>Friendship Day Wishes</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container conts mt-5 w-25 p-5 border rounded shadow">
-        <p id="currDate"> </p>
-        <p>Enter the DOB in format </p>
-        <p style="margin-top: -10px;">(MM/DD/YYYY)</p>
-        <input type="text" placeholder="Enter your D.O.B" id="DOB" class="form-control p-2">
-        <button id="CalcAge" class="btn btn-outline-primary mt-3">Calculate Age</button><br>
-        <p id="age" class="mt-3"></p>
+    <div class="container">
+        <div id="countdown" class="countdown"></div>
+        <div id="content" class="hidden">
+            <h1>Happy Friendship Day!</h1>
+            <h2>To my dearest friend KOWSALYA (HE 👨‍⚕️)</h2>
+            <p>At the short time we ahve been the best friends. Hope this will continue for the long time and u will stay with me and will my cheli for the life time </p>
+            <p class="signature">With love, SAGAR</p>
+        </div>
+        <div class="game">
+            <h3>Guess the Number!</h3>
+            <p>Guess a number between 1 and 100:</p>
+            <input type="number" id="guessInput" min="1" max="100">
+            <button id="guessButton">Guess</button>
+            <button id="restartButton" class="hidden">Restart</button>
+            <p id="feedback"></p>
+            <h4>Game Records:</h4>
+            <table id="recordsTable">
+                <thead>
+                    <tr>
+                        <th>Game</th>
+                        <th>Guesses</th>
+                    </tr>
+                </thead>
+                <tbody id="recordsBody">
+                </tbody>
+            </table>
+        </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
