--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <p>
     AKKA NEKU KOCHAM ANNA NETHI UNDA BDAY NIGHT 12 KI OPEN CHEY MANANU GA APUDE CHASESEVA 
-    TIME COMPLETE IYANTHA VARAKU WAIT CHEY 
+    TIME COMPLETE IYANTHA VARAKU WAIT CHEY <br>
     ADVANCE HAPPY BIRTHDAY AKKA 🖤
   </p>
     <div id="countdown" class="fade-in">
