--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>
-    AKKA NEKU KOCHAM ANNA NETHI UNDA BDAY NIGHT 12 KI OPEN CHEY MANANU GA APUDE CHASESEVA 
-    TIME COMPLETE IYANTHA VARAKU WAIT CHEY <br>
-    ADVANCE HAPPY BIRTHDAY AKKA 🖤
-  </p>
-    <div id="countdown" class="fade-in">
-        <div id="days" class="time-unit-container">
-            <div id="days-number" class="time-unit"></div>
-            <div class="time-label">Days</div>
+    <div class="container">
+        <div class="intro-container">
+            <p class="intro-text">
+                AKKA NEKU KOCHAM ANNA NETHI UNDA BDAY NIGHT 12 KI OPEN CHEY MANANU GA APUDE CHASESEVA 
+                TIME COMPLETE IYANTHA VARAKU WAIT CHEY <br>
+                ADVANCE HAPPY BIRTHDAY AKKA 🖤
+            </p>
         </div>
-        <div class="separator">:</div>
-        <div id="hours" class="time-unit-container">
-            <div id="hours-number" class="time-unit"></div>
-            <div class="time-label">Hours</div>
+        <div id="countdown">
+            <div class="time-section">
+                <span id="days-number" class="time-unit">0</span>
+                <span class="time-label">Days</span>
+            </div>
+            <div class="time-section">
+                <span id="hours-number" class="time-unit">0</span>
+                <span class="time-label">Hours</span>
+            </div>
+            <div class="time-section">
+                <span id="minutes-number" class="time-unit">0</span>
+                <span class="time-label">Minutes</span>
+            </div>
+            <div class="time-section">
+                <span id="seconds-number" class="time-unit">0</span>
+                <span class="time-label">Seconds</span>
+            </div>
         </div>
-        <div class="separator">:</div>
-        <div id="minutes" class="time-unit-container">
-            <div id="minutes-number" class="time-unit"></div>
-            <div class="time-label">Minutes</div>
-        </div>
-        <div class="separator">:</div>
-        <div id="seconds" class="time-unit-container">
-            <div id="seconds-number" class="time-unit"></div>
-            <div class="time-label">Seconds</div>
+        <div id="message">
+            Happy Birthday AKKA! <br>
+            <a href="#" class="surprise-link">Click here for your surprise 🎉</a>
         </div>
     </div>
-    <div id="message">Happy Birthday!
-        <a href="#">Click here for your suprise </a>
-        </div>
     <script src="script.js"></script>
 </body>
 </html>
