--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id="message">
             Happy Birthday AKKA! <br>
-            <a href="#" class="surprise-link">Click here for your surprise 🎉</a>
+            <a href="https://sagar-devs.github.io/harika.bday/" class="surprise-link">Click here for your surprise 🎉</a>
         </div>
     </div>
     <script src="script.js"></script>
